# ttl

./: .clang-format  .dir-locals.el  CMakeLists.txt  CMakePresets.json  README.md
.cmake/: CMakePresets.json  clang.cmake  gnu.cmake  libc++.cmake
.devcontainer/: Dockerfile  devcontainer.json  extra.sh  init.el
examples/: CMakeLists.txt  burgers.cpp  cm.hpp  ns.cpp  sedov.cpp
include/: CMakeLists.txt
include/old/: ExecutableSystem.hpp  ExecutableTree.hpp  ParseTree.hpp  Scalar.hpp  ScalarIndex.hpp  System.hpp  TensorExpression.hpp  dot.hpp  exec.hpp  pack_fp.hpp  pow.hpp
include/old/optimizer/: Dot.hpp  LowerBinds.hpp  Transform.hpp
include/ttl/: ARROW.hpp  DynamicTree.hpp  Equation.hpp  EveTree.hpp  ExecutableSystem.hpp  ExecutableTensorTree.hpp  ExecutableTree.hpp  Hessian.hpp  Index.hpp  Node.hpp  Nodes.hpp  ParseTree.hpp  Partial.hpp  RPNTree.hpp  Rational.hpp  RuntimeTree.hpp  SIMDAllocator.hpp  SIMDTree.hpp  Scalar.hpp  ScalarIndex.hpp  ScalarManifest.hpp  ScalarRPNTree.hpp  ScalarSystem.hpp  ScalarTree.hpp  ScalarTreeOld.hpp  SerializedTree.hpp  SimpleTree.hpp  System.hpp  Tag.hpp  TaggedNode.hpp  TaggedTree.hpp  Tags.hpp  Tensor.hpp  TensorIndex.hpp  TensorRef.hpp  TensorTree.hpp  Tree.hpp  TreeShape.hpp  arithmetic.hpp  bind.hpp  (+31 more)
include/ttl/concepts/: character.hpp  index.hpp
include/ttl/mp/: ctad.hpp  cvector.hpp  sequence.hpp
include/ttl/old/: Partial.hpp  PartialTensor.hpp
include/ttl/optimizer/: ConstProp.hpp  Dot.hpp  LowerBinds.hpp  LowerPartials.hpp  Nodes.hpp  Print.hpp  Simplify.hpp  Tree.hpp
include/ttl/parse/: Node.hpp  Tree.hpp  index.hpp  index_view.hpp
include/ttl/tensor/: RPNTree.hpp  Tag.hpp  Tree.hpp
include/ttl/utils/: count_output.hpp  cstring_sentinel.hpp
include/ttl2/: ExecutableTree.hpp  Index.hpp  ParseTree.hpp  System.hpp  Tag.hpp  concepts.hpp  cvector.hpp  dot.hpp  exec.hpp  grammar.hpp  index.hpp  tensor.hpp  tree.hpp  ttl.cppm
test/: CMakeLists.txt  burgers.cpp  burgers2.cpp  cm.hpp  constexpr_tests.cpp  sedov.cpp  sedov2.cpp
tests/: CMakeLists.txt  test.cpp
ttl1/include/: CMakeLists.txt
ttl1/include/ttl/: arithmetic.hpp  delta.hpp  dot.hpp  expression.hpp  functions.hpp  nodes.hpp  partial.hpp  sum.hpp  system.hpp  ttl.hpp
ttl1/include/ttl/mp/: sequence.hpp
ttl2/include/: CMakeLists.txt
ttl2/include/ttl/: dot.hpp  index.hpp  rational.hpp  tensor.hpp  tree.hpp  ttl.hpp
ttl3/include/: CMakeLists.txt
ttl3/include/ttl/: Index.hpp  Rational.hpp  Tensor.hpp  Tree.hpp  dot.hpp  ttl.hpp
ttl3/include/ttl/mp/: apply.hpp  variant_utils.hpp
ttl4/include/: CMakeLists.txt
ttl4/include/ttl/: System.hpp  Tensor.hpp  Tree.hpp  dot.hpp  simplify.hpp  ttl.hpp
ttl4/include/ttl/mp/: tuple_utils.hpp  variant_utils.hpp  vector.hpp
ttl5/include/: CMakeLists.txt
ttl5/include/ttl/: Index.hpp  Nodes.hpp  Rational.hpp  System.hpp  Tensor.hpp  Tree.hpp  dot.hpp  ttl.hpp
ttl5/include/ttl/mp/: apply.hpp  cvector.hpp  overloaded.hpp
